--- a/reaction.html
+++ b/reaction.html
@@ -11,14 +11,14 @@
 </head>
 <body>
 
-  <h2>reaction timer</h2>
+  <h2>Manoj reaction timer</h2>
 
   <p id="target">Your time</p>
   <p id="countdown">Count</p>
 
   <button type="button"
   class="btn btn-primary"
-  onclick="buttonPress2()">
+  onclick="startTime()">
   Start Timer.</button>
 
   <button type="button"
@@ -30,16 +30,30 @@
   
   <script> 
   var myTime= undefined
+  var buttonTime = Date.now()
     function recordReact() {
         myTime = Date.now();
         console.log("Time : " + myTime);
       }
 
-  function buttonPress2() {
+  function startTime() {
+    for(let i=0;i<4;i++)
     setTimeout(()=>{
-      document.getElementById('target').style.color = "red"
-    }, 3000)
+      document.getElementById('target').innerHTML = i
+    }, (3-i)*1000)
+    setTimeout(() =>{
+      if (myTime ==undefined){
+          document.getElementById('target').innerHTML ="Too Slow"
+      }
+      else{
+          document.getElementById('target').innerHTML ="time was " + (myTime - buttonTime);
+      }
+  },3000)
+
   }
+
+  
+
   </script>
 
 </body>
