--- a/reasure.html
+++ b/reasure.html
@@ -89,7 +89,8 @@
         "15", "16", "17", "18", "19", "20", "21", "22", "23", "24"
       ]
       var clickCount = 0;
-      var treasureLocation = 18;
+      var treasureLocation = Math.floor(Math.random() * ids.length)
+      
 
       const makeGuess = (pos) => {
         let imgId;
