--- a/reaction.html
+++ b/reaction.html
@@ -1,58 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>COUNTDOWN</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <title>COUNTDOWN</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
-  <h2>Manoj reaction timer</h2>
+    <h2>Manoj reaction timer</h2>
 
-  <p id="target">Your time</p>
-  <p id="countdown">Count</p>
+    <p id="target">Your time</p>
+    <p id="countdown">Count</p>
 
-  <button type="button"
-  class="btn btn-primary"
-  onclick="startTime()">
-  Start Timer.</button>
+    <button type="button" class="btn btn-primary" onclick="startTime()">
+        Start Timer.</button>
 
-  <button type="button"
-  class="btn btn-primary"
-  onclick="recordReact()">
-  React Now.</button>
-  
-  
-  
-  <script> 
-  var myTime= undefined
-  var buttonTime = Date.now()
-    function recordReact() {
-        myTime = Date.now();
-        console.log("Time : " + myTime);
-      }
+    <button type="button" class="btn btn-primary" onclick="recordReact()">
+        React Now.</button>
 
-  function startTime() {
-    for(let i=0;i<4;i++)
-    setTimeout(()=>{
-      document.getElementById('target').innerHTML = i
-    }, (3-i)*1000)
-    setTimeout(() =>{
-      if (myTime ==undefined){
-          document.getElementById('target').innerHTML ="Too Slow"
-      }
-      else{
-          document.getElementById('target').innerHTML ="time was " + (myTime - buttonTime);
-      }
-  },3000)
 
-  }
 
-  </script>
+    <script>
+        var myTime = undefined
+        var buttonTime = Date.now()
+
+        function recordReact() {
+            myTime = Date.now();
+            console.log("Time : " + myTime);
+        }
+
+        function startTime() {
+            var ranNo = Math.floor(Math.random() * 10) + 2;
+            for (let i = 0; i < ranNo+1; i++)
+                setTimeout(() => {
+                    document.getElementById('target').innerHTML = i
+                }, (ranNo - i) * 1000)
+            setTimeot(() => {
+                if (myTime == undefined) {
+                    document.getElementById('target').innerHTML = "Too Slow"
+                } else {
+                    document.getElementById('target').innerHTML = "time was " + (myTime - buttonTime);
+                }
+            }, 3000)
+
+        }
+    </script>
 
 </body>
+
 </html>
