--- a/reasure.html
+++ b/reasure.html
@@ -22,65 +22,65 @@
       <div class="row container">
         <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="0" onclick="makeGuess(0)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="1" onclick="makeGuess(1)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="1" onclick="makeGuess(1)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="2" onclick="makeGuess(2)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="2" onclick="makeGuess(2)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="3" onclick="makeGuess(3)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="3" onclick="makeGuess(3)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="4" onclick="makeGuess(4)"
-            class="img-fluid"></div>
-      </div>
-      <br>
-      <div class="row container">
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="5" onclick="makeGuess(5)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="6" onclick="makeGuess(6)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="7" onclick="makeGuess(7)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="8" onclick="makeGuess(8)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="9" onclick="makeGuess(9)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="4" onclick="makeGuess(4)"
             class="img-fluid"></div>
       </div>
       <br>
       <div class="row container">
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="10" onclick="makeGuess(10)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="5" onclick="makeGuess(5)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="11" onclick="makeGuess(11)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="6" onclick="makeGuess(6)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="12" onclick="makeGuess(12)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="7" onclick="makeGuess(7)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="13" onclick="makeGuess(13)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="8" onclick="makeGuess(8)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="14" onclick="makeGuess(14)"
-            class="img-fluid"></div>
-      </div>
-      <br>
-      <div class="row container">
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="15" onclick="makeGuess(15)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="16" onclick="makeGuess(16)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="17" onclick="makeGuess(17)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="18" onclick="makeGuess(18)"
-            class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="19" onclick="makeGuess(19)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="9" onclick="makeGuess(9)"
             class="img-fluid"></div>
       </div>
       <br>
       <div class="row container">
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="20" onclick="makeGuess(20)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="10" onclick="makeGuess(10)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="21" onclick="makeGuess(21)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="11" onclick="makeGuess(11)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="22" onclick="makeGuess(22)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="12" onclick="makeGuess(12)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="23" onclick="makeGuess(23)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="13" onclick="makeGuess(13)"
             class="img-fluid"></div>
-        <div class="col-sm-2"><img src="book1.JPG" alt="Image of dusty book" id="24" onclick="makeGuess(24)"
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="14" onclick="makeGuess(14)"
+            class="img-fluid"></div>
+      </div>
+      <br>
+      <div class="row container">
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="15" onclick="makeGuess(15)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="16" onclick="makeGuess(16)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="17" onclick="makeGuess(17)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="18" onclick="makeGuess(18)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="19" onclick="makeGuess(19)"
+            class="img-fluid"></div>
+      </div>
+      <br>
+      <div class="row container">
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="20" onclick="makeGuess(20)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="21" onclick="makeGuess(21)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="22" onclick="makeGuess(22)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="23" onclick="makeGuess(23)"
+            class="img-fluid"></div>
+        <div class="col-sm-2"><img src="book1.jpg" alt="Image of dusty book" id="24" onclick="makeGuess(24)"
             class="img-fluid"></div>
       </div>
     </div>
