--- a/reaction.html
+++ b/reaction.html
@@ -41,7 +41,7 @@
                 setTimeout(() => {
                     document.getElementById('target').innerHTML = i
                 }, (ranNo - i) * 1000)
-            setTimeot(() => {
+            setTimeout(() => {
                 if (myTime == undefined) {
                     document.getElementById('target').innerHTML = "Too Slow"
                 } else {
